# advent_of_code

./: Cargo.toml  grammar.lalrpop
2020/: Cargo.toml
2020/01/: Cargo.toml
2020/01/src/: main.rs
2020/02/: Cargo.toml
2020/src/: dec01.rs  dec02.rs  dec03.rs  dec04.rs  dec05.rs  lib.rs  main.rs
2021/src/: main.rs  template.rs  util.rs
data/2021/: dec06.txt
src/: ast.rs  main.rs  parse.rs  template.rs
src/yr2020/: dec01.rs  dec02.rs  dec04.rs  dec06.rs  dec07.rs  mod.rs
src/yr2021/: dec01.rs  dec02.rs  dec03.rs  dec04.rs  dec05.rs  dec06.rs  dec07.rs  dec08.rs  dec09.rs  dec10.rs  dec11.rs  dec12.rs  mod.rs
upto2021/: Cargo.toml
upto2021/data/2021/: dec00.txt
upto2021/src/yr2020/: dec01.rs  dec05.rs  dec06.rs  dec07.rs
upto2021/src/yr2021/: dec01.rs  dec02.rs  dec03.rs  dec04.rs  dec06.rs  dec07.rs  dec08.rs  dec09.rs  dec11.rs  mod.rs
yr2022/dec01/: Cargo.toml
yr2022/dec01/src/: main.rs
yr2022/dec02/: Cargo.toml
yr2022/dec02/src/: main.rs
yr2022/dec03/src/: main.rs
yr2022/dec04/: Cargo.toml
yr2022/dec04/src/: main.rs
yr2022/dec05/: Cargo.toml
yr2022/dec05/src/: main.rs
yr2022/dec06/: Cargo.toml
yr2022/dec06/src/: main.rs
yr2022/dec07/: Cargo.toml
yr2022/dec07/src/: main.rs
yr2022/dec08/: Cargo.toml
yr2022/dec08/src/: main.rs
yr2022/dec09/: Cargo.toml
yr2022/dec09/src/: main.rs
yr2022/dec10/: Cargo.toml
yr2022/dec10/src/: main.rs
yr2022/dec11/: Cargo.toml
yr2022/dec11/src/: main.rs
yr2022/dec12/: Cargo.toml
yr2022/dec12/src/: main.rs
yr2022/dec13/: Cargo.toml
yr2022/template/: Cargo.toml
(+1 files in other folders)
