[package]
name = "aoc_2021"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "advent_of_code_2021"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.4"
itertools = "0.10.1"
lalrpop-util = { version = "0.19.6", features = ["lexer"] }

[build-dependencies]
lalrpop = "0.19.6"

[profile.dev.package."*"]
opt-level = 3

